<resources>
    <string name="app_name">The Big One</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_file_loader">File Load</string>
    <string name="option2">Add Cruise</string>
    <string name="option3">Cruise details</string>
    <string name="mainScreenText">Cruises will be displayed here.</string>
    <string name="option1">View CruiseList</string>
    <string name="option4">Price Changer</string>
    <string name="option9">Load File</string>
    <string name="fileInputHint">Enter URL file here</string>
    <string name="loadButton">Load File</string>
    <string name="title_activity_add_ship">AddShipActivity</string>
    <string name="appTitle">Add Ship</string>
    <string name="lineHint">Enter cruise line</string>
    <string name="nameHint">Enter ship name</string>
    <string name="regionHint">Enter the ship region</string>
    <string name="lengthHint">Please enter trip length</string>
    <string name="priceHint">Enter ship Price</string>
    <string name="URLHint">Enter image URL</string>
    <string name="button">Add</string>
    <string name="saveButton">Save</string>
    <string name="FileNameHint">Enter a new file name</string>
    <string name="addShip">Add a Ship</string>
    <string name="codeHint">Enter ship code</string>
    <string name="gratHint">Enter gratuity</string>
    <string name="bottomView">Status: </string>
    <string name="cruiseViewHint">Enter the cruise code</string>
    <string name="title_activity_cruise_view">Cruise Viewer</string>
    <string name="CruiseViewButton">Load cruise</string>
    <string name="title_activity_price_change">Price Correction</string>
    <string name="priceChange">New Price</string>
    <string name="priceChangeButton">Change</string>
    <string name="title_activity_remove_ship">Delete Cruise</string>
    <string name="option5">Delete Cruise</string>
    <string name="option6">Most Expensive</string>
    <string name="option7">Average Length</string>
    <string name="option8">Lux ship</string>
    <string name="title_activity_file_save">Save to File</string>
</resources>
