<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.spade.thebigone.MainActivity">
    <item
        android:id="@+id/viewList"
        android:onClick="onOption1"
        android:title="@string/option1"/>

    <item
        android:id="@+id/addShip"
        android:onClick="onOption2"
        android:title="@string/addShip" />
    <item
        android:id="@+id/ViewCruise"
        android:onClick="onOption3"
        android:title="@string/option3" />
    <item
        android:id="@+id/priceChanger"
        android:onClick="onOption4"
        android:title="@string/option4" />
    <item
        android:id="@+id/fileLoad"
        android:onClick="onOption9"
        android:title="@string/option9" />

    <item
        android:id="@+id/AverageLen"
        android:orderInCategory="101"
        android:title="@string/option7"
        android:onClick="onOption7"/>
    <item
        android:id="@+id/RemoveShip"
        android:onClick="onOption5"
        android:title="@string/option5" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/MostExpensive"
        android:layout_height="wrap_content"
        android:title="@string/option6"
        android:onClick="onOption6"/>
    <item
        android:id="@+id/CustomOption"
        android:orderInCategory="102"
        android:onClick="onOption8"
        android:title="@string/option8" />
</menu>
